Added bootstrap theme and some styling

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,22 @@
     {{content-for "head-footer"}}
   </head>
   <body class="container-fluid">
-    {{content-for "body"}}
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Cover</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          {{content-for "body"}}
+          <div class="jumbotron">
+            <h1>Hi</h1>
+          </div>
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/ga-wdi-boston.ember-template.js"></script>
